[package]
name = "monarchsse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.25", features = ["full"] }
base64 = "0.21.0"
futures = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = "1.26"
